Mediawiki is ok with mariadb and docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,15 +16,17 @@ services:
       # After initial setup, download LocalSettings.php to the same directory as
       # this yaml and uncomment the following line and use compose to restart
       # the mediawiki service
-      # - ./LocalSettings.php:/var/www/html/LocalSettings.php
       - ./LocalSettings.php:/var/www/html/LocalSettings.php
   database:
     image: mariadb
     restart: always
+    ports:
+      - 3306:3306
     environment:
-      # @see https://phabricator.wikimedia.org/source/mediawiki/browse/master/includes/DefaultSettings.php
+        # @see https://phabricator.wikimedia.org/source/mediawiki/browse/master/includes/DefaultSettings.php
       MYSQL_DATABASE: my_wiki
       MYSQL_USER: wikiuser
       MYSQL_PASSWORD: example
       MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
+
 
